Write graph-data slide [WIP]

--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -248,7 +248,7 @@
 				</section>
 
 				<section id="p16">
-					<h3>路線図の場合</h3>
+					<h3>経路探索の場合</h3>
 				</section>
 
 				<section id="p17">
@@ -284,15 +284,55 @@
 				<section id="p21">
 					<h2>オープンなSPARQLエンドポイント</h2>
 					https://www.w3.org/wiki/SparqlEndpoints
+					http://ja.dbpedia.org/
 				</section>
 
 				<section id="p22">
 					<h2>SPARQLをちょっとだけ紹介</h2>
+					<p>形に当てはめるようなクエリ</p>
 				</section>
 
 				<section id="p23">
 					RDFの理想と課題
 					ボキャブラリーの分散、データの分散
+				</section>
+
+				<section id="p24">
+					<h2>グラフの可視化</h2>
+				</section>
+
+				<section id="p25">
+					<h2>デスクトップアプリケーション</h2>
+					<ul>
+						<li>Cytoscape</li>
+						<li>R</li>
+						<li>Python</li>
+					</ul>
+				</section>
+
+				<section id="p26">
+					<h2>JavaScriptライブラリ</h2>
+					<ul>
+						<li>d3.js</li>
+						<li>cytoscape.js</li>
+						<li>JIT</li>
+						<li>springy</li>
+					</ul>
+				</section>
+
+				<section id="p27">
+					<h2>まとめ</h2>
+					<ul>
+						<li>グラフ構造のデータはグラフデータベースに入れる</li>
+						<li>※目的によってはメリットが少ないこともある</li>
+						<li>オープンデータをグラフとして公開できる</li>
+						<li>RDFとSPARQL</li>
+						<li>グラフの可視化 - ブラウザ上でもある程度スムーズに表示できる</li>
+					</ul>
+				</section>
+
+				<section id="p28">
+					<h2>END</h2>
 				</section>
 			</div><!--/.slides-->
 		</div><!--/.reveal-->
