Update graph-data slide

--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -209,7 +209,7 @@
 				<section id="p11" class="pageBlock">
 					<h2>Neo4j</h2>
 					<div class="mt10">
-						<img src="/images/neo4j_cap.png" width="484" height="344" alt="" />
+						<img src="images/neo4j_cap.png" width="484" height="344" alt="" />
 					</div>
 					<div class="mt30">
 						<ul>
@@ -229,7 +229,7 @@
 				<section id="p12" class="pageBlock">
 					<h2>導入事例</h2>
 					<div class="mt10">
-						<img src="/images/neo4j_cap2.png" width="484" height="344" alt="" />
+						<img src="images/neo4j_cap2.png" width="484" height="344" alt="" />
 					</div>
 					<ul class="mt20">
 						<li>ロジスティクス</li>
@@ -519,9 +519,11 @@ WHERE {
 					<div class="mt20 clearfix">
 						<div class="colLeft">
 							<h4>Force directed</h4>
+							<img src="images/layout_force.png" alt="" />
 						</div>
 						<div class="colRight">
 							<h4>Circular</h4>
+							<img src="images/layout_circular.png" alt="" />
 						</div>
 					</div>
 				</section>
